fix share button jump

--- a/src/assets/css/layout/_profile-view-control-container.scss
+++ b/src/assets/css/layout/_profile-view-control-container.scss
@@ -26,6 +26,10 @@
 }
 
 .project-body-content {
+	* {
+		max-width: 100%;
+		display: block;
+	}
 	img {
 		width: 100%;
 	}
